--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,16 @@ after_success:
   - docker push usmanahmed/multi-nginx
   - docker push usmanahmed/multi-server
   - docker push usmanahmed/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-598005871748"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
