--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,34 @@
-version: '3'
+version: "3"
 services:
-  # Service 1
-  postgres:
-    image: 'postgres:latest'
-  
-  # Service 2
-  redis:
-    image: 'redis:latest'
-  
-  # Service 3
-  api:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /app/node_modules
-      - ./server:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PGUSER=postgres
-      - PGHOST=postgres
-      - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
-      - PGPORT=5432
-
-  # Service 4
   client:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./client
-    volumes:
-      - /app/node_modules
-      - ./client:/app   
-  
-  # Service 5
-  worker:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./worker
-    volumes:
-      - /app/node_modules
-      - ./worker:/app
+    image: usmanahmed/multi-client
+    mem_limit: 128m
+    hostname: client
+  server:
+    image: usmanahmed/multi-server
+    mem_limit: 128m
+    hostname: api
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-  
-  # Service 6
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+      - POSTGRES_HOST=$PGHOST
+      - POSTGRES_PORT=$PGPORT
+      - POSTGRES_USER=$PGUSER
+      - POSTGRES_PASSWORD=$PGPASSWORD
+      - POSTGRES_DB=$PGDATABASE
+  worker:
+    image: usmanahmed/multi-worker
+    mem_limit: 128m
+    hostname: worker
+    environment:
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
   nginx:
-    restart: always
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./nginx
+    image: usmanahmed/multi-nginx
+    mem_limit: 128m
+    hostname: nginx
     ports:
-      - '3050:80'
+      - 80:80
+    depends_on:
+      - client
+      - server
