--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: "multi-docker"
+  app: "docker-multi-container"
   env: "MultiDocker-env"
   bucket_name: "elasticbeanstalk-us-east-2-598005871748"
   bucket_path: "docker-multi"
