--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,23 @@ services:
   - docker
 
 before_install: 
-  - docker build -t usmanahmed/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t monsieurusmanahmed350/react-test -f ./client/Dockerfile.dev ./client
 
 script: 
-  - docker run -e CI=true usmanahmed/react-test npm test
+  - docker run -e CI=true monsieurusmanahmed350/react-test npm test
 
 after_success:
-  - docker build -t usmanahmed/multi-client ./client
-  - docker build -t usmanahmed/multi-nginx ./nginx
-  - docker build -t usmanahmed/multi-server ./server
-  - docker build -t usmanahmed/multi-worker ./worker
+  - docker build -t monsieurusmanahmed350/multi-client ./client
+  - docker build -t monsieurusmanahmed350/multi-nginx ./nginx
+  - docker build -t monsieurusmanahmed350/multi-server ./server
+  - docker build -t monsieurusmanahmed350/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push usmanahmed/multi-client
-  - docker push usmanahmed/multi-nginx
-  - docker push usmanahmed/multi-server
-  - docker push usmanahmed/multi-worker
+  - docker push monsieurusmanahmed350/multi-client
+  - docker push monsieurusmanahmed350/multi-nginx
+  - docker push monsieurusmanahmed350/multi-server
+  - docker push monsieurusmanahmed350/multi-worker
 
 deploy:
   provider: elasticbeanstalk
