--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,14 +6,14 @@ FROM node:14.14.0
 WORKDIR /app
 
 # Copy the package.json and package-lock.json files to the container
-COPY package*.json ./
+COPY ./package*.json ./
 
 # Install the dependencies
-RUN npm ci --only=production
+RUN npm install
 
 # Copy the rest of the application code to the container
 COPY . .
 
 
 # Set the command to start the application
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "build"]
