--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -5,13 +5,13 @@ FROM node:14-alpine
 WORKDIR /app
 
 # Copy package.json and package-lock.json
-COPY package*.json ./
+COPY ./package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install
 
 # Copy the rest of the application code
 COPY . .
 
 # Start the application
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "build"]
