--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: monsieurusmanahmed350/multi-client
     mem_limit: 128m
     hostname: client
-  server:
+  api:
     image: monsieurusmanahmed350/multi-server
     mem_limit: 128m
     hostname: api
