--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -23,7 +23,7 @@ server {
     }
 
     location /api {
-        rewrite ^/api/(.*) /$1 break;
+        rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
     }
 }
